[project]
name = "repl-nix-startuppapermatcher"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.1.3",
    "en-core-web-sm",
    "numpy==1.21.6",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "scipy==1.7.3",
    "spacy==3.4.4",
    "streamlit>=1.40.2",
    "trafilatura>=2.0.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.3/en_core_web_sm-3.5.3-py3-none-any.whl" }
